monitoring/tempo-stack/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tempo-stack
  labels:
    name: tempo-stack
