monitoring/tempo-stack/tempo-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tempo
  namespace: tempo-stack
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - tempo.vanillax.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tempo-gateway
          port: 80
